# gitfoldersdocs

./: README.rst  setup.cfg  tox.ini
