[metadata]
name = <gitfoldersdocs>
version = <version number: 0.0.1>
license = <GNU GENERAL PUBLIC LICENSE>
description = <A GIT 'project setup' helper application>
long_description = file: README.rst
author = <keacoder>
author_email = <keacoder@protonmail.com>
classifiers=
	<classifier 1>
	<classifier 2>
	<...>
	<classifier m>
[options]
packages = find:
package_dir =
	=src
include_package_data = True
install_requires =
	<requirement 1>
	<requirement 2>
	<...>
	<requirement n>
[options.packages.find]
where=src